--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -10,6 +10,7 @@ html {
     width: 80%;
     text-align: center;
   }
+
   
   .button {
     width: 100px;
@@ -25,10 +26,13 @@ html {
   #white {
     background: white;
   }
-  #blue {
-    background: blue;
+  #red {
+    background: red;
   }
   #yellow {
     background: yellow;
+  }
+  #blue {
+    background: blue;
   }
   
