--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -1,9 +1,18 @@
+
+
 .container {
-    width: 575px;
-    height: 825px;
-  
+    width: 1305px;
+    height: 800px;
     background-color: #797978;
     padding-left: 30px;
+  }
+
+  .container h1{
+    text-align: center;
+  }
+
+  .container form {
+    text-align: center;
   }
   #height,
   #weight {
